dhall/tests/type-inference/failure/unit/AssertNotEquivalence.txt
Type error: error: AssertMustTakeEquivalence
 --> <current file>:1:1
  |
1 | assert : Bool
  | ^^^^^^^^^^^^^ AssertMustTakeEquivalence
  |
